// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToProjectTutorial component should render AddToProjectTutorial with isLoggedIn=true 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "height": 42,
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
        },
        Object {
          "top": 106,
        },
      ]
    }
  >
    <Text
      color="secondary"
      size="small"
    >
      First Project
    </Text>
  </View>
  <Image
    height={90}
    resizeMode="contain"
    source={1}
    style={
      Object {
        "left": 180,
        "position": "absolute",
        "top": 145,
        "transform": Array [
          Object {
            "rotate": "160 deg",
          },
        ],
      }
    }
    width={90}
  />
  <View
    style={
      Object {
        "paddingHorizontal": 32,
        "top": 180,
      }
    }
  >
    <View>
      <Text
        color="white"
        family="archer"
        size="large"
        weight="bold"
      >
        Add items to a Project
      </Text>
      <Text
        color="white"
        size="small"
      >
        Create and organize a master shopping list for your home improvement project. Save inspiration and share your project progress!
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "bottom": 0,
        "height": 50,
        "left": 0,
        "paddingHorizontal": 24,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#B1B2B4",
          "borderBottomWidth": 1,
        }
      }
    />
    <LinkButton
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "padding": 16,
        }
      }
    >
      <Text
        color="white"
      >
        Got it!
      </Text>
    </LinkButton>
  </View>
</View>
`;

exports[`AddToProjectTutorial component should render AddToProjectTutorial with required props 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "height": 42,
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
        },
        Object {
          "top": 106,
        },
      ]
    }
  >
    <Text
      color="secondary"
      size="small"
    >
      First Project
    </Text>
  </View>
  <Image
    height={90}
    resizeMode="contain"
    source={1}
    style={
      Object {
        "left": 180,
        "position": "absolute",
        "top": 145,
        "transform": Array [
          Object {
            "rotate": "160 deg",
          },
        ],
      }
    }
    width={90}
  />
  <View
    style={
      Object {
        "paddingHorizontal": 32,
        "top": 180,
      }
    }
  >
    <View>
      <Text
        color="white"
        family="archer"
        size="large"
        weight="bold"
      >
        Add items to a Project
      </Text>
      <Text
        color="white"
        size="small"
      >
        Create and organize a master shopping list for your home improvement project. Save inspiration and share your project progress!
      </Text>
    </View>
    <View
      style={
        Object {
          "marginTop": 40,
        }
      }
    >
      <Text
        color="white"
        size="small"
      >
        Already have an Account?
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <LinkButton
          onPress={[Function]}
          style={
            Object {
              "paddingRight": 8,
            }
          }
        >
          <Text
            color="primary"
            size="small"
          >
            Login
          </Text>
        </LinkButton>
        <Text
          color="white"
          size="small"
          style={
            Object {
              "paddingRight": 8,
            }
          }
        >
          or
        </Text>
        <LinkButton
          onPress={[Function]}
        >
          <Text
            color="primary"
            size="small"
          >
            Create Account
          </Text>
        </LinkButton>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "bottom": 0,
        "height": 50,
        "left": 0,
        "paddingHorizontal": 24,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#B1B2B4",
          "borderBottomWidth": 1,
        }
      }
    />
    <LinkButton
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "padding": 16,
        }
      }
    >
      <Text
        color="white"
      >
        Got it!
      </Text>
    </LinkButton>
  </View>
</View>
`;
